# robot_arm_pick_and_place

./: .gitignore  IK.ipynb  IK_JT.ipynb  IK_server.py  IK_server_JT.py  InverseKinematics.ipynb  InverseKinematicsUR5.ipynb  README.md
.ipynb_checkpoints/: IK-checkpoint.ipynb  IK_JT-checkpoint.ipynb  IK_server-checkpoint.py  IK_server_JT-checkpoint.py  InverseKinematics-checkpoint.ipynb  InverseKinematicsUR5-checkpoint.ipynb  README-checkpoint.md
Jupiter_notebooks/: RobotSimulation.ipynb
Jupiter_notebooks/data/: forward_kinematics_quaternions.p
data/: forward_kinematics.p  forward_kinematics_quaternions.p  forward_kinematics_rpy.p  jacobian.p  jacobian_quaternions.p  jacobian_rpy.p
img/: polaris_ros_graph(4).drawio - draw.io.html
img/polaris_ros_graph(4).drawio - draw.io_files/: api.js  cbgapi.loaded_0  client.js  postmessageRelay.html  proxy.html
img/polaris_ros_graph(4).drawio - draw.io_files/postmessageRelay_data/: cbgapi.loaded_0  rpcshindig_random.js
img/polaris_ros_graph(4).drawio - draw.io_files/proxy_data/: cbgapi.loaded_0  googleapis.js
jupiter_notebooks/: InverseKinematicsUR5.ipynb  RobotSimulation.ipynb
jupiter_notebooks/.ipynb_checkpoints/: InverseKinematicsUR5-checkpoint.ipynb  RobotSimulation-checkpoint.ipynb
notebook/: InverseKinematicsUR5.ipynb
notebook/data/: forward_kinematics_rpy.p  jacobian_quaternions.p
ur5_pick_place/bin_description/: CMakeLists.txt  package.xml
ur5_pick_place/bin_description/urdf/: bin.urdf
ur5_pick_place/gripper_description/: CMakeLists.txt  package.xml
ur5_pick_place/gripper_description/urdf/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro
ur5_pick_place/ur5_arm/: CMakeLists.txt  package.xml
ur5_pick_place/ur5_arm/cfg/: ur5_arm_ik.yaml  view_robot.rviz
ur5_pick_place/ur5_arm/launch/: ik_server.launch  pick_place_demo.launch  view_ur5_arm.launch
ur5_pick_place/ur5_arm/params/: ur5_arm_ik.yaml
ur5_pick_place/ur5_arm/scripts/: gripper_command.py  ik_server.py  joint_trajectory_client.py  joint_trajectory_command.py  pick_and_place_demo.py  pick_and_place_moveit.py
ur5_pick_place/ur5_arm_description/: CMakeLists.txt  package.xml
ur5_pick_place/ur5_arm_description/urdf/: gazebo_plugins.urdf.xacro  (+1 more)
ur5_pick_place/ur5_arm_gazebo/: CMakeLists.txt  package.xml
ur5_pick_place/ur5_arm_gazebo/controller/: arm_controller.yaml  controllers.yaml
ur5_pick_place/ur5_arm_gazebo/launch/: controller_utils.launch  ur5.launch  ur5_empty_world.launch  ur5_grasping_world.launch
ur5_pick_place/ur5_arm_gazebo/models/kinect_ros/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
ur5_pick_place/ur5_arm_gazebo/models/kinematics_bin/: model.config  model.sdf
ur5_pick_place/ur5_arm_gazebo/params/: targets.yaml
ur5_pick_place/ur5_arm_gazebo/scripts/: spawn_object.py  spawn_target_server.py
ur5_pick_place/ur5_arm_gazebo/srv/: SpawnTarget.srv
ur5_pick_place/ur5_arm_gazebo/urdf/: target.urdf.xacro
ur5_pick_place/ur5_arm_gazebo/worlds/: smart_grasping_mod.world  smart_grasping_mod1.world
ur5_pick_place/ur5_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+28 files in other folders)
