<?xml version="1.0"?>
<package>
  <name>ur5_arm_gazebo</name>
  <version>0.0.1</version>
  <description>
      The ur5_arm_gazebo package
  </description>

<!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marcello@todo.todo">marcello</maintainer>  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>  <!-- Url tags are optional, but multiple are allowed, one per tag -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <test_depend>roslaunch</test_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
